Fixed weird 'selected page' box alignment

--- a/public/stylesheets/alphabetical_pagination.css
+++ b/public/stylesheets/alphabetical_pagination.css
@@ -12,6 +12,7 @@
 
 .alphabetcal_pagination ul li {
 	display: inline;
+  padding: 1px 2px;
 }
 
 .alphabetcal_pagination a {
